syntax = "proto3";

import "google/protobuf/empty.proto";

package secret;

service SecretInfoService {
  rpc GetSecretInfo (google.protobuf.Empty) returns (SecretInfo);
}

message SecretInfo {
  string secret = 1;
}